[package]
name = "esp_turret"
version = "0.1.0"
authors = ["jan"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
name = "esp_turret"
path = "src/lib.rs"

[[bin]]
name = "esp_turret"
path = "src/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44.1"
esp-idf-sys = "0.35.0"
libm = "0.2.8"
accel-stepper = { version = "0.1.0", features = ["std"] }
prost = "0.13.2"
bytes = "1.7.2"

[build-dependencies]
embuild = "0.32.0"
prost-build = "0.13.2"
